@@ -1,0 +1,51 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Template for the user profile's personal information widget</title>
+</head>
+<body>
+
+<!-- ###PERSONAL_INFORMATION### begin -->
+
+<h4>###LLL:information.personalInformation###</h4>
+
+<table border="0" cellpadding="0" cellspacing="0">
+	<tbody>
+		<tr>
+			<td class="label">###LLL:information.activities###:</td>
+			<td class="data">###USER.activities###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information.interests###:</td>
+			<td class="data">###USER.interests###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information.favoriteMusic###:</td>
+			<td class="data">###USER.favoriteMusic###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information.favoriteShows###:</td>
+			<td class="data">###USER.favoriteShows###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information.favoriteMovies###:</td>
+			<td class="data">###USER.favoriteMovies###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information.favoriteBooks###:</td>
+			<td class="data">###USER.favoriteBooks###</td>
+		</tr>
+		<tr>
+			<td class="label">###LLL:information.aboutMe###:</td>
+			<td class="data">###USER.aboutMe###</td>
+		</tr>
+	</tbody>
+</table>
+
+
+<!-- ###PERSONAL_INFORMATION### end -->
+
+</body>
+</html>
