@@ -1,6 +1,7 @@
 2008-08-28 Ingo Renner  <ingo@typo3.org>
 
 	* added initial user profile personal information widget skeleton
+	* added personal information template
 
 2008-08-27 Ingo Renner  <ingo@typo3.org>
 
